# EE_TrackExplorationSimulation

./: CMakeLists.txt  README.md  algorithm_functions.c  exploration.c  exploration.h  globals.c  globals.h  main.c
algorithm_structs_PUBLIC/: FundamentalPath.c  FundamentalPath.h  MapPoint.c  MapPoint.h  Path.c  Path.h
track_files_PRIVATE/: track_detection.c  track_detection.h  track_generation.c  track_generation.h  track_navigation.c  track_navigation.h
